Fixed alignment on kss style tags

--- a/kss-template/kss-assets/scss/_kss-trumps.scss
+++ b/kss-template/kss-assets/scss/_kss-trumps.scss
@@ -3,4 +3,5 @@
   padding: 0;
   font-size: 1em;
   display: inline-block;
+  vertical-align: inherit;
 }
